feat: add cache control patterns for /lib/ directory JS files
- Add cache settings for /lib/*.js files (1 day + stale-while-revalidate)
- Add cache settings for hashed JS files in /lib/ directory (1 week)
- Support bundle and minified JS files in lib directory
- Maintain consistent cache strategy across all JS file locations

--- a/customHttp.yml
+++ b/customHttp.yml
@@ -121,6 +121,11 @@ customHeaders:
       - key: "Cache-Control"
         value: "public, max-age=86400, stale-while-revalidate=604800"
 
+  - pattern: "/lib/*.js"
+    headers:
+      - key: "Cache-Control"
+        value: "public, max-age=86400, stale-while-revalidate=604800"
+
   # Cache settings for CSS files with hash (long cache) - most specific patterns first
   - pattern: "/css/main.bundle.min.*.css"
     headers:
@@ -149,6 +154,21 @@ customHeaders:
         value: "public, max-age=604800"
 
   - pattern: "/js/*.min.*.js"
+    headers:
+      - key: "Cache-Control"
+        value: "public, max-age=604800"
+
+  - pattern: "/lib/main.bundle.min.*.js"
+    headers:
+      - key: "Cache-Control"
+        value: "public, max-age=604800"
+
+  - pattern: "/lib/*.bundle.*.js"
+    headers:
+      - key: "Cache-Control"
+        value: "public, max-age=604800"
+
+  - pattern: "/lib/*.min.*.js"
     headers:
       - key: "Cache-Control"
         value: "public, max-age=604800"
