fix: extend /lib/ cache patterns to include subdirectories
- Change /lib/*.js to /lib/**/*.js for recursive matching
- Update all /lib/ patterns to use /** for subdirectory support
- Fix cache control for files like /lib/jquery/jquery.slim.min.*.js
- Ensure consistent cache behavior across all /lib/ subdirectories

--- a/customHttp.yml
+++ b/customHttp.yml
@@ -121,7 +121,7 @@ customHeaders:
       - key: "Cache-Control"
         value: "public, max-age=86400, stale-while-revalidate=604800"
 
-  - pattern: "/lib/*.js"
+  - pattern: "/lib/**/*.js"
     headers:
       - key: "Cache-Control"
         value: "public, max-age=86400, stale-while-revalidate=604800"
@@ -158,17 +158,17 @@ customHeaders:
       - key: "Cache-Control"
         value: "public, max-age=604800"
 
-  - pattern: "/lib/main.bundle.min.*.js"
+  - pattern: "/lib/**/main.bundle.min.*.js"
     headers:
       - key: "Cache-Control"
         value: "public, max-age=604800"
 
-  - pattern: "/lib/*.bundle.*.js"
+  - pattern: "/lib/**/*.bundle.*.js"
     headers:
       - key: "Cache-Control"
         value: "public, max-age=604800"
 
-  - pattern: "/lib/*.min.*.js"
+  - pattern: "/lib/**/*.min.*.js"
     headers:
       - key: "Cache-Control"
         value: "public, max-age=604800"
