--- a/amplify.yml
+++ b/amplify.yml
@@ -41,6 +41,13 @@ frontend:
     build:
       commands:
         - hugo --gc --minify
+    postBuild:
+      commands:
+        - echo "Checking resources/_gen directory contents..."
+        - echo "Files in resources/_gen ->"
+        - find resources/_gen -type f 2>/dev/null | sort || echo "resources/_gen directory not found or empty"
+        - echo "Total files in resources/_gen ->"
+        - find resources/_gen -type f 2>/dev/null | wc -l || echo "0"
   artifacts:
     baseDirectory: public
     files:
